# market_forecast_model

./: .pre-commit-config.yaml  LICENSE  PACKAGE_IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  python-package.yml
notebooks/: market_forecast_colab_demo.ipynb
requirements/: constraints.txt  core.txt  dev.txt
scripts/: bootstrap_env.sh
src/market_forecast/: __init__.py
src/market_forecast/adapters/: financial.py  generic_ts.py
src/market_forecast/backtest/: attribution.py  engine.py  metrics.py  walk_forward.py
src/market_forecast/cli/: main.py
src/market_forecast/config/: defaults.py  schemas.py
src/market_forecast/dashboard/: app.py  multi_asset.py  single_asset.py
src/market_forecast/data/: loaders.py  preprocess.py  providers.py  validators.py
src/market_forecast/ensemble/: combiner.py  regime_weighting.py  stacking.py
src/market_forecast/features/: macro.py  seasonality.py  selection.py  technical.py  trend.py  volatility.py
src/market_forecast/models/: arima.py  base.py  clustering.py  ewma_corr.py  garch.py  regressors.py  svr.py
src/market_forecast/pipelines/: forecast_pipeline.py  research_pipeline.py
src/market_forecast/risk/: analytics.py  portfolio.py  scenarios.py
src/market_forecast/signals/: calibration.py  technical_tiers.py  thresholding.py  transform.py
src/market_forecast/utils/: time.py  typing.py
tests/: test_dashboard.py  test_pipeline.py  test_risk.py  test_technical_signals.py
