[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-forecast"
version = "0.1.0"
description = "Market-focused 1-12 week forecasting package with reusable time-series core"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Market Forecast Team"}]
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.2",
  "scipy==1.13.1",
  "scikit-learn==1.5.1",
  "statsmodels==0.14.2",
  "arch==7.0.0",
  "pydantic==2.8.2",
  "pydantic-settings==2.3.4",
  "pyyaml==6.0.2",
  "joblib==1.4.2",
  "ta==0.11.0",
  "plotly==5.23.0",
]

[project.optional-dependencies]
market = [
  "yfinance==0.2.41",
  "pandas-datareader==0.10.0",
  "fredapi==0.5.2",
]
dashboard = [
  "streamlit==1.37.1",
]
dev = [
  "pytest==8.3.2",
  "pytest-cov==5.0.0",
  "ruff==0.6.2",
  "black==24.8.0",
  "mypy==1.11.1",
  "nbclient==0.10.0",
  "papermill==2.6.0",
  "pre-commit==3.8.0",
]

[project.scripts]
mforecast = "market_forecast.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q --cov=src/market_forecast --cov-report=term-missing --cov-report=xml:coverage.xml --cov-fail-under=80"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
